fix alignment and remove upload prompt text

--- a/src/components/UI/Upload/Upload.module.scss
+++ b/src/components/UI/Upload/Upload.module.scss
@@ -9,12 +9,14 @@
     display: flex;
     box-sizing: border-box;
     align-items: center;
+    text-align: left;
     color: var(--colordefault);
     input {
       display: none;
     }
     button {
       margin-left: 5px;
+      text-align: left;
 
       &.Hidden {
         display: none;
